<package format="3">
  <name>rqt_bag</name>
  <version>0.5.1</version>
  <description>rqt_bag provides a GUI plugin for displaying and replaying ROS bag files.</description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rqt_bag</url>
  <url type="repository">https://github.com/ros-visualization/rqt_bag</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_bag/issues</url>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="ablasdel@gmail.com">Aaron Blasdel</author>
  <author email="namniart@gmail.com">Austin Hendrix</author>
  <author>Tim Field</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend version_gte="0.2.12">rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
