<package format="3">
  <name>rqt_bag_plugins</name>
  <version>0.4.14</version>
  <description>rqt_bag provides a GUI plugin for displaying and replaying ROS bag files.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_bag</url>
  <url type="repository">https://github.com/ros-visualization/rqt_bag</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_bag/issues</url>

  <author>Aaron Blasdel</author>
  <author>Tim Field</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-cairo</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-cairo</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-imaging</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pil</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_bag</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_bag plugin="${prefix}/plugin.xml"/>
  </export>
</package>
